--- a/Qualification_Testing/public/css/main.css
+++ b/Qualification_Testing/public/css/main.css
@@ -3,9 +3,9 @@ body {
   background-color: #fff;
   color: #636b6f;
   font-family: 'Nunito', sans-serif;
-  font-weight: 200;
-  height: 100vh;
-  margin: 0;
+  /* font-weight: 200; */
+  /* height: 100vh; */
+  /* margin: 0; */
 }
 
 .banner {
@@ -61,15 +61,6 @@ footer {
   transform: translateX(0);
   transform: translate3d(0, 0, 0);
 }
-
-/* .card{
-  border-radius: 4px;
-  background: #fff;
-  box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
-    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
-padding: 14px 80px 18px 36px;
-cursor: pointer;
-} */
 
 .hover_action:hover{
     transform: scale(1.05);
