--- a/Qualification_Testing/public/css/main.css
+++ b/Qualification_Testing/public/css/main.css
@@ -3,6 +3,7 @@ body {
   background-color: #fff;
   color: #636b6f;
   font-family: 'Nunito', sans-serif;
+  position: relative; 
   /* font-weight: 200; */
   /* height: 100vh; */
   /* margin: 0; */
